--- a/device-types/IBM/SAN24B-4.yaml
+++ b/device-types/IBM/SAN24B-4.yaml
@@ -1,5 +1,5 @@
 manufacturer: IBM
 model: IBM SAN24B-4 24/8 Switch
-slug: ibm-san24b-4-24/8
+slug: ibm-san24b-4-24-8
 u_height: 1
 is_full_depth: false
