--- a/device-types/HPE/HPE-ProLiant-DL360p-G8.yaml
+++ b/device-types/HPE/HPE-ProLiant-DL360p-G8.yaml
@@ -3,3 +3,16 @@ model: HPE-ProLiant-DL360p-G8
 slug: hpe-proliant-dl360p-g8
 u_height: 1
 is_full_depth: true
+interfaces:
+  - name: vmnic0 
+    type: 1000base-t
+    mgmt_only: false
+  - name: vmnic1
+    type: 1000base-t
+    mgmt_only: false
+  - name: vmnic4 
+    type: 1000base-t
+    mgmt_only: false
+  - name: vmnic5
+    type: 1000base-t
+    mgmt_only: false
